force-app/main/default/objects/ssot__BenefitSchedule__dlm/fields/ssot__DefaultBenefitQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__DefaultBenefitQuantity__c</fullName>
    <label>Default Benefit Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DefaultBenefitQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>