force-app/main/default/objects/ssot__BenefitSchedule__dlm/fields/ssot__FirstSessionEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__FirstSessionEndDateTime__c</fullName>
    <label>First Session End Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FirstSessionEndDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>