force-app/main/default/objects/ssot__BenefitSchedule__dlm/fields/ssot__FirstSessionStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__FirstSessionStartDateTime__c</fullName>
    <label>First Session Start Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FirstSessionStartDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>