force-app/main/default/objects/ssot__BenefitSchedule__dlm/fields/ssot__MaximumParticipantCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__MaximumParticipantCount__c</fullName>
    <label>Maximum Participant Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MaximumParticipantCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>