force-app/main/default/objects/ssot__BenefitSchedule__dlm/fields/ssot__rel_1716726576198_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726576198_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BenefitSchedule_BenefitId_map_Progra_rel</label>
    <referenceTo>ssot__ProgramBenefit__dlm</referenceTo>
    <relationshipLabel>BenefitSchedule_BenefitId_map_Progra_rel</relationshipLabel>
    <relationshipName>rel_1716726576198_end</relationshipName>
    <type>Lookup</type>
</CustomField>